Added dynamic page loading - stats page doesn't work?

--- a/frontend/CSS/index-style.css
+++ b/frontend/CSS/index-style.css
@@ -16,6 +16,12 @@
   margin-top: 0px;
 }
 
+/* This is to load each page
+***************************************/
+#agents, #logs, #stats {
+  display: none;
+}
+
 /* This for agents.html
 ***************************************/
 .links line {
